# software-security

./: README.md
Client2/: client_cleancalls.c  shellcode_payload  wisdom-alt
Client2/build_clean/: Makefile  cmake_install.cmake
Client3/: anti_evasion.c  makefile  target_app  target_app.c
client1/: CMakeLists.txt  shellcode_gen.py
client1/build_clean/: CMakeCache.txt
wisdom/: client_wisdom_libc.c  payload
